# pikakahvi

./: .gitignore  README.md
android/: build.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/res/layout/: activity_edit_list.xml  activity_list.xml  activity_main.xml  activity_new_list.xml  activity_new_thing.xml  activity_recently_done.xml  activity_settings.xml  addthinglist.xml  chooselist.xml  export_button.xml  import_button.xml  recent_button.xml  recent_list_item.xml  resetdatabasebutton.xml  settings_button.xml  texti.xml
android/gradle/wrapper/: gradle-wrapper.properties
common/: .gcc-flags.json  .gitignore  CMakeLists.txt  common.cpp  common.hpp  copy_sql_to_headers.bash  generate-data-structs.bash  generate_data_from_template.py
common/data-templates/: list.template  task.template
common/db/: conversions.cpp  conversions.hpp  db.cpp  db.hpp  upgrade.cpp  upgrade.hpp
common/dbtest/: main.cpp
common/repository/: repository.cpp  repository.hpp  repositoryconfig.cpp  repositoryconfig.hpp  taskrepository.cpp  taskrepository.hpp
common/sql/upgrade/: v01-version.sql  v02-things.sql  v03-lists.sql  v04-deprecated-lists.sql  v05-indexes.sql  v06-rename-thing-to-task.sql  v07-timestamp-done.sql  v08-task-priority.sql
common/sql/upgrade/debug/: v02-d01-addthings.sql  v03-d01-addthings.sql
common/task/: tasks.cpp  tasks.hpp
common/test/: main.cpp
common/test/db/: conversions.cpp
common/test/repository/: taskrepository.cpp
(+15 files in other folders)
